# wgpu_custom_web

./: .gitignore  justfile  package-lock.json  package.json  tsconfig.json
lib/: Cargo.toml  build.rs  justfile
lib/assets/: config.toml
lib/assets/shaders/: model.wgsl  simple.wgsl
lib/assets/shaders/composed_simple/: functions.wgsl  simple.wgsl
lib/assets/spv/: custom.spv  debug.spv  equirectangular.spv  hdr.spv  light.spv  mesh.spv  model.spv  simple.spv  sky.spv  texture.spv
lib/crates/custom-engine-components/: Cargo.toml
lib/crates/custom-engine-components/src/: components.rs  errors.rs  lib.rs  object.rs  primitives.rs  traits.rs  utils.rs
lib/crates/custom-engine-components/src/components/: camera.rs  light.rs  projection.rs
lib/crates/custom-engine-components/src/components/camera/: controller.rs  data.rs  projection.rs
lib/crates/custom-engine-components/src/object/: metadata.rs  triangle.rs
lib/crates/custom-engine-core/: Cargo.toml
lib/crates/custom-engine-core/src/: bind_group.rs  buffer.rs  context.rs  errors.rs  instance.rs  lib.rs  model.rs  old_runtime.rs  pipeline.rs  render_pass.rs  runtime.rs  shader.rs  storage.rs  texture.rs  traits.rs  uniform.rs  utils.rs  worker.rs
lib/crates/custom-engine-core/src/bind_group/: entry.rs  layout.rs
lib/crates/custom-engine-core/src/model/: material.rs  mesh.rs
lib/crates/custom-engine-core/src/pipeline/: layout.rs
lib/crates/custom-engine-core/src/render_pass/: color_attachment.rs  depth_stencil.rs  query_set.rs
lib/crates/custom-engine-core/src/texture/: depth.rs  render.rs
lib/crates/custom-engine-core/src/utils/: image.rs
lib/crates/custom-engine-core/src/worker/: chain.rs  context_impls.rs  inner.rs
lib/crates/custom-engine-derive/: Cargo.toml
lib/crates/custom-engine-derive/src/: builder.rs  lib.rs
lib/crates/custom-engine-func/: Cargo.toml
lib/crates/custom-engine-func/src/: functor.rs  hkt.rs  lib.rs  monad.rs
lib/crates/custom-engine-models/: Cargo.toml
lib/crates/custom-engine-models/examples/: gltf.rs
lib/crates/custom-engine-models/src/: gltf.rs  lib.rs  obj.rs  utils.rs
lib/crates/custom-engine-models/src/gltf/: camera.rs  document.rs  material.rs  mesh.rs  node.rs  primitive.rs  root.rs  scene.rs  texture.rs
lib/crates/custom-engine-utils/: Cargo.toml
lib/crates/custom-engine-utils/src/: image.rs  macros.rs  reference.rs
lib/src/: application.rs  config.rs  errors.rs  files.rs  lib.rs  main.rs  runner.rs  workers.rs
lib/src/application/: foreign.rs  key_bindings.rs
lib/src/application/foreign/: export_functions.rs
lib/src/workers/: camera.rs  custom.rs  model.rs  render_texture.rs  render_to_texture.rs  simple.rs
public/: index.html
public/assets/shaders/: custom.wgsl  hdr.wgsl  light.wgsl  model.wgsl
public/assets/shaders/composed_mesh/: mesh.wgsl  vertex_output.wgsl  view_bindings.wgsl  view_types.wgsl
public/assets/spv/: custom.spv  debug.spv  light.spv  model.spv  simple.spv
src/: App.css  App.tsx  index.css  index.tsx  react-app-env.d.ts
src/assets/engine/shaders/: mesh.wgsl  model.wgsl  simple.wgsl  texture.wgsl
src/assets/engine/shaders/composed_mesh/: functions.wgsl  types.wgsl
src/assets/engine/shaders/composed_simple/: simple.wgsl
src/assets/engine/spv/: hdr.spv  simple.spv  sky.spv  texture.spv
src/connectors/: init.tsx  runner.tsx
src/helpers/: file.tsx
src/ui/atoms/: Button.tsx  DropdownButton.tsx
