[package]
name = "wgpu_custom_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
egui = [ "custom-engine-core/egui" ]
puffin = [ "custom-engine-core/puffin" ]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu_custom_engine_bin"
path = "src/main.rs"

[dependencies]
# Core 
custom-engine-core = { path = "./crates/custom-engine-core" }
custom-engine-components = { path = "./crates/custom-engine-components" }
custom-engine-models = { path = "./crates/custom-engine-models" }

# Graphic
winit = { version =  "0.29", features = [ "rwh_05" ] }

# Async 
pollster = "0.3.0"

# Log 
log = "0.4.20"

# Error 
anyhow = "1.0.79"
thiserror = "1.0.56"

# Serialize | Deserialize
serde = { version = "1.0.195", default-features = false, features = [ "derive" ] }
serde_yaml = "0.9"
quick-xml = { version = "0.31.0", default-features = false, features = [ "serialize" ] }

# Math 
cgmath = "0.18.0"

# Memory
bytemuck = "1.14.0"

# File
image = { version = "0.24", features = [ "png", "jpeg" ] }
rust-embed = { version = "8.2.0", features = [ "include-exclude", "interpolate-folder-path", "debug-embed" ] }

# Helpers
regex = "1.10.2"
cfg-if = "1"
derive_more = "0.99.17"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
futures = "0.3.30"
js-sys = "0.3.67"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen = "0.2.90"

[build-dependencies]
anyhow = "1.0.79"
naga = { version = "0.19.0", features = [ "wgsl-in", "spv-out"] }
naga_oil = { version = "0.12.0", features = [ "prune" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.19"
log4rs = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
console_error_panic_hook = "0.1.7"
console_log = "1.0"
web-sys = { version = "0.3.67", features = [ 
  "console",
  "Document",
  "Window",
  "Element",
  "Document",
  "Navigator",
  "Node",
  "NodeList",
  "Gpu",
  "GpuAdapter",
  "GpuAddressMode",
  "GpuAutoLayoutMode",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupLayoutEntry",
  "GpuBlendComponent",
  "GpuBlendFactor",
  "GpuBlendOperation",
  "GpuBlendState",
  "GpuBuffer",
  "GpuBufferBinding",
  "GpuBufferBindingLayout",
  "GpuBufferBindingType",
  "GpuBufferDescriptor",
  "GpuCanvasAlphaMode",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuColorDict",
  "GpuColorTargetState",
  "GpuCommandBuffer",
  "GpuCommandBufferDescriptor",
  "GpuCommandEncoder",
  "GpuCommandEncoderDescriptor",
  "GpuCompareFunction",
  "GpuCompilationInfo",
  "GpuCompilationMessage",
  "GpuCompilationMessageType",
  "GpuComputePassDescriptor",
  "GpuComputePassEncoder",
  "GpuComputePassTimestampWrites",
  "GpuComputePipeline",
  "GpuComputePipelineDescriptor",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuDevice",
  "GpuDeviceDescriptor",
  "GpuDeviceLostInfo",
  "GpuDeviceLostReason",
  "GpuError",
  "GpuErrorFilter",
  # "GpuExtent2dDict", Not yet implemented in web_sys
  "GpuExtent3dDict",
  "GpuFeatureName",
  "GpuFilterMode",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuImageCopyBuffer",
  "GpuImageCopyExternalImage",
  "GpuImageCopyTexture",
  "GpuImageCopyTextureTagged",
  "GpuImageDataLayout",
  "GpuIndexFormat",
  "GpuLoadOp",
  "gpu_map_mode",
  "GpuMipmapFilterMode",
  "GpuMultisampleState",
  "GpuObjectDescriptorBase",
  "GpuOrigin2dDict",
  "GpuOrigin3dDict",
  "GpuOutOfMemoryError",
  "GpuPipelineDescriptorBase",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuPowerPreference",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuProgrammableStage",
  "GpuQuerySet",
  "GpuQuerySetDescriptor",
  "GpuQueryType",
  "GpuQueue",
  "GpuRenderBundle",
  "GpuRenderBundleDescriptor",
  "GpuRenderBundleEncoder",
  "GpuRenderBundleEncoderDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassEncoder",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuRequestAdapterOptions",
  "GpuSampler",
  "GpuSamplerBindingLayout",
  "GpuSamplerBindingType",
  "GpuSamplerDescriptor",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuStencilFaceState",
  "GpuStencilOperation",
  "GpuStorageTextureAccess",
  "GpuStorageTextureBindingLayout",
  "GpuStoreOp",
  "GpuSupportedFeatures",
  "GpuSupportedLimits",
  "GpuTexture",
  "GpuTextureAspect",
  "GpuTextureBindingLayout",
  "GpuTextureDescriptor",
  "GpuTextureDimension",
  "GpuTextureFormat",
  "GpuTextureSampleType",
  "GpuTextureView",
  "GpuTextureViewDescriptor",
  "GpuTextureViewDimension",
  "GpuUncapturedErrorEvent",
  "GpuUncapturedErrorEventInit",
  "GpuValidationError",
  "GpuVertexAttribute",
  "GpuVertexBufferLayout",
  "GpuVertexFormat",
  "GpuVertexState",
  "GpuVertexStepMode",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "ImageBitmap",
  "ImageBitmapRenderingContext",
  "Window",
  "WorkerGlobalScope",
  "WorkerNavigator",
 ] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.19.0", features = [ "webgl", "wgsl" ], default-features = false }  

[workspace]
members = [
  ".",
  "crates/custom-engine-core",
  "crates/custom-engine-func",
  "crates/custom-engine-components",
  "crates/custom-engine-models", 
]
