[package]
name = "wgpu_custom_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu_custom_engine_bin"
path = "src/main.rs"

[dependencies]
# Core 
custom-engine-core = { path = "./crates/custom-engine-core" }
custom-engine-components = { path = "./crates/custom-engine-components" }
custom-engine-models = { path = "./crates/custom-engine-models" }
custom-engine-derive = { path = "./crates/custom-engine-derive" }
custom-engine-utils = { path = "./crates/custom-engine-utils" }

# Graphic
winit = { version =  "0.30", features = [ "rwh_05" ] }

# Async 
pollster = "0.3.0"

# Log 
log = "0.4.22"

# Error 
anyhow = "1.0.89"
thiserror = "1.0.63"

# Serialize | Deserialize
serde = { version = "1.0.210", default-features = false, features = [ "derive" ] }
serde_yaml = "0.9"
quick-xml = { version = "0.36.2", default-features = false, features = [ "serialize" ] }

# Math 
cgmath = "0.18.0"

# Memory
bytemuck = "1.18.0"

# File
image = { version = "0.25", features = [ "png", "jpeg" ] }
rust-embed = { version = "8.5.0", features = [ "include-exclude", "interpolate-folder-path", "debug-embed" ] }

# Time 
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

# Helpers
regex = "1.10.6"
cfg-if = "1"
derive_more = { version = "1.0.0", features = ["full"] }

[build-dependencies]
anyhow = "1.0.89"
naga = { version = "22.1.0", features = [ "wgsl-in", "spv-out", "wgsl-out" ] }
naga_oil = { version = "0.15.0", features = [ "prune" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "22.1"
log4rs = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
web-sys = { version = "0.3.70", features = [ 
  "console",
  "Document",
  "Window",
  "Screen",
  "Element",
  "Document",
  "Navigator",
  "Node",
  "NodeList",
  "Gpu",
  "GpuAdapter",
  "GpuAddressMode",
  "GpuAutoLayoutMode",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupLayoutEntry",
  "GpuBlendComponent",
  "GpuBlendFactor",
  "GpuBlendOperation",
  "GpuBlendState",
  "GpuBuffer",
  "GpuBufferBinding",
  "GpuBufferBindingLayout",
  "GpuBufferBindingType",
  "GpuBufferDescriptor",
  "GpuCanvasAlphaMode",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuColorDict",
  "GpuColorTargetState",
  "GpuCommandBuffer",
  "GpuCommandBufferDescriptor",
  "GpuCommandEncoder",
  "GpuCommandEncoderDescriptor",
  "GpuCompareFunction",
  "GpuCompilationInfo",
  "GpuCompilationMessage",
  "GpuCompilationMessageType",
  "GpuComputePassDescriptor",
  "GpuComputePassEncoder",
  "GpuComputePassTimestampWrites",
  "GpuComputePipeline",
  "GpuComputePipelineDescriptor",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuDevice",
  "GpuDeviceDescriptor",
  "GpuDeviceLostInfo",
  "GpuDeviceLostReason",
  "GpuError",
  "GpuErrorFilter",
  "GpuExtent3dDict",
  "GpuFeatureName",
  "GpuFilterMode",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuImageCopyBuffer",
  "GpuImageCopyExternalImage",
  "GpuImageCopyTexture",
  "GpuImageCopyTextureTagged",
  "GpuImageDataLayout",
  "GpuIndexFormat",
  "GpuLoadOp",
  "gpu_map_mode",
  "GpuMipmapFilterMode",
  "GpuMultisampleState",
  "GpuObjectDescriptorBase",
  "GpuOrigin2dDict",
  "GpuOrigin3dDict",
  "GpuOutOfMemoryError",
  "GpuPipelineDescriptorBase",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuPowerPreference",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuProgrammableStage",
  "GpuQuerySet",
  "GpuQuerySetDescriptor",
  "GpuQueryType",
  "GpuQueue",
  "GpuRenderBundle",
  "GpuRenderBundleDescriptor",
  "GpuRenderBundleEncoder",
  "GpuRenderBundleEncoderDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassEncoder",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuRequestAdapterOptions",
  "GpuSampler",
  "GpuSamplerBindingLayout",
  "GpuSamplerBindingType",
  "GpuSamplerDescriptor",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuStencilFaceState",
  "GpuStencilOperation",
  "GpuStorageTextureAccess",
  "GpuStorageTextureBindingLayout",
  "GpuStoreOp",
  "GpuSupportedFeatures",
  "GpuSupportedLimits",
  "GpuTexture",
  "GpuTextureAspect",
  "GpuTextureBindingLayout",
  "GpuTextureDescriptor",
  "GpuTextureDimension",
  "GpuTextureFormat",
  "GpuTextureSampleType",
  "GpuTextureView",
  "GpuTextureViewDescriptor",
  "GpuTextureViewDimension",
  "GpuUncapturedErrorEvent",
  "GpuUncapturedErrorEventInit",
  "GpuValidationError",
  "GpuVertexAttribute",
  "GpuVertexBufferLayout",
  "GpuVertexFormat",
  "GpuVertexState",
  "GpuVertexStepMode",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "ImageBitmap",
  "ImageBitmapRenderingContext",
  "Window",
  "WorkerGlobalScope",
  "WorkerNavigator",
 ] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
wgpu = { version = "22.1.0", features = [ "webgl", "wgsl" ], default-features = false }  

[workspace]
members = [
  ".",
  "crates/custom-engine-core",
  "crates/custom-engine-components",
  "crates/custom-engine-models", 
  "crates/custom-engine-derive", 
  "crates/custom-engine-utils", 
]
