[package]
name = "custom-engine-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core 
custom-engine-core = { path = "../custom-engine-core" }
custom-engine-derive = { path = "../custom-engine-derive" }

# Errors
anyhow = "1.0.79"
thiserror = "1.0.56"

# File 
rust-embed = { version = "8.2.0", features = [ "include-exclude", "interpolate-folder-path" ] }

# Math 
cgmath = "0.18.0"

# Graphic
winit = { version =  "0.29", features = [ "rwh_05" ] }

# Memory
bytemuck = { version = "1.14.0", features = [ "derive" ] }

# Helpers
derive_more = "0.99.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
wgpu = { version = "0.19.1", features = [ "webgl", "wgsl" ], default-features = false }  
