[package]
name = "custom-engine-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Own
custom-engine-core = { path = "../custom-engine-core" }
custom-engine-derive = { path = "../custom-engine-derive" }
custom-engine-models = { path = "../custom-engine-models" }

# Errors
anyhow = "1.0.82"
thiserror = "1.0.59"

# File 
rust-embed = { version = "8.3.0", features = [ "include-exclude", "interpolate-folder-path" ] }

# Math 
cgmath = { version = "0.18.0" }

# Graphic
winit = { version =  "0.30", features = [ "rwh_05" ] }

# Memory
bytemuck = { version = "1.15.0", features = [ "derive" ] }

# Time 
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

# Helpers
derive_more = "0.99.17"
bitflags = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
wgpu = { version = "0.20.0", features = [ "webgl", "wgsl" ], default-features = false }  
