[package]
name = "custom-engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
# Own
custom-engine-models = { path = "../custom-engine-models" }

# Files 
image = { version = "0.24", default-features = false, features = [ "png", "jpeg" ] }
tobj = "4.0.1"

# Math 
cgmath = "0.18.0"

# Memory
bytemuck = { version = "1.14.3", features = [ "derive" ] }

# Errors
anyhow = "1.0.80"
thiserror = "1.0.57"

# Async
pollster = "0.3.0"
flume = "0.11.0"

# Window
winit = { version =  "0.29", features = [ "rwh_05" ] }
raw-window-handle = "0.6.0"

# Log
log = "0.4.20"

# Helpers
derive_more = "0.99.17"
rand = "0.8.5"
derivative = "2.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
wgpu = { version = "0.19.1", features = [ "webgl", "wgsl" ], default-features = false }  
