[package]
name = "custom-engine-func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-engine-core = { path = "../custom-engine-core" }

# graphic
wgpu = "0.19"

# files 
rust-embed = { version = "8.2.0", features = [ "include-exclude", "interpolate-folder-path" ] }
tobj = { version = "4.0.0", features = [ "async" ]}
image = { version = "0.24", default-features = false, features = [ "png", "jpeg" ] }

# math 
cgmath = "0.18.0"

# memory
bytemuck = { version = "1.14.0", features = [ "derive" ] }

# errors
anyhow = "1.0.79"
thiserror = "1.0.56"

# async
pollster = "0.3.0"
flume = "0.11.0"

# window
winit = { version =  "0.29", features = [ "rwh_05" ] }
raw-window-handle = "0.6.0"

# log
log = "0.4.20"

# helpers
strum_macros = "0.25.3"
strum = "0.25.0"
derive_more = "0.99.17"
