[package]
name = "custom-engine-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Own 
custom-engine-utils = { path = "../custom-engine-utils" }

# Log 
log = "0.4.21"

# Files 
tobj = { version = "4.0", features = ["async"]}
gltf = { version =  "1.4.0", features = [ 
  "extras", 
  "extensions", 
  "KHR_lights_punctual",
  "KHR_materials_pbrSpecularGlossiness",
  "KHR_materials_unlit",
  "KHR_texture_transform",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_variants",
  "KHR_materials_volume",
  "KHR_materials_specular",
  "KHR_materials_emissive_strength",
] }
image = { version = "0.25", features = [ "hdr", "png", "jpeg" ] }

# Math 
cgmath = "0.18.0"
collision = { git = "https://github.com/rojer-98/collision-rs.git" }

# Error
anyhow = "1.0.82"

# Helpers
base64 = "0.22.1"
derive_more = "0.99.17"
cfg-if = "1"
derivative = "2.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
reqwest = { version = "0.12.4" }
getrandom = { version = "0.2", features = [ "js" ] }
web-sys = { version = "0.3.69", features = [ 
  "Document",
  "Window",
  "Location",
]}
wasm-bindgen = { version = "0.2.92" }
