[package]
name = "custom-engine-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Log 
log = "0.4.22"

# Error
anyhow = "1.0.89"

# Async 
pollster = "0.3.0"

# Helpers
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]  
reqwest = { version = "0.12.7" }
getrandom = { version = "0.2", features = [ "js" ] }
web-sys = { version = "0.3.70", features = [ 
  "Document",
  "Window",
  "Location",
]}
wasm-bindgen = { version = "0.2.93" }
